# engineer-challenge

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  utils.sh
web/backend/auth_module/: Cargo.toml
web/backend/auth_module/src/: main.rs
web/backend/auth_module/src/infrastructure/http/: server.rs
web/backend/auth_module/src/presentation/api/: mod.rs
web/backend/auth_module/src/presentation/api/v1/: errors.rs  extractors.rs  mod.rs
web/backend/auth_module/src/startup/: config.rs  init.rs
web/backend/rust_kratos/: .env  Cargo.toml
web/backend/rust_kratos/migrations/2026-03-19-120413-0000_create_users/: up.sql
web/backend/rust_kratos/migrations/2026-03-19-120417-0000_create_credentials/: up.sql
web/backend/rust_kratos/migrations/2026-03-19-120421-0000_create_sessions/: up.sql
web/backend/rust_kratos/migrations/2026-03-19-120424-0000_create_verification_tokens/: down.sql  up.sql
web/backend/rust_kratos/migrations/2026-03-19-120428-0000_create_settings_audit/: down.sql  up.sql
web/backend/rust_kratos/src/: schema.rs
web/backend/rust_kratos/src/application/bootstrap/: config.rs
web/backend/rust_kratos/src/application/commands/auth/: logout.rs
web/backend/rust_kratos/src/application/queries/: get_current_user.rs
web/backend/rust_kratos/src/domain/entities/: mod.rs
web/backend/rust_kratos/src/domain/value_objects/: mod.rs
web/backend/rust_kratos/src/infrastructure/adapters/: mod.rs
web/backend/rust_kratos/src/infrastructure/adapters/db/: mod.rs  pool.rs
web/backend/rust_kratos/src/infrastructure/di/: container.rs  factory.rs
web/backend/rust_kratos/tests/integration/: kratos_identity_test.rs  usecases_test.rs
(+155 files in other folders)
