[package]
name = "auth_module"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_kratos = { path = "../rust_kratos" }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.13.0"
config = { version="0.15.22" }
actix-cors = "0.7"
anyhow = "1"
dotenvy = "0.15.7"
