[package]
name = "rust_kratos"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
actix-web = "4"
async-graphql = { version = "8.0.0-rc.1", features = ["chrono"] }
async-graphql-actix-web = "8.0.0-rc.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.44" }
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
anyhow = "1.0"
serde_json = { version = "1.0.149" }
async-trait = { version = "0.1.89" }
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
config = "0.15.22"
actix-web-prometheus = "0.1.2"
dotenvy = "0.15"
redis = { version = "1.0.5", features = ["tokio-comp", "connection-manager"] }
diesel = { version = "2.3.7", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
diesel-async = { version = "0.7.4", features = ["postgres", "bb8"] }

[[test]]
name = "integration"
path = "tests/lib.rs"


[dev-dependencies]
uuid = { version = "1.22.0", features = ["v4"] }

[features]
default = []
